# sova-reth

./: .dockerignore  .gitignore  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.cross  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  code2prompt.md  deny.toml  docker-compose.yml  genesis.json  justfile  settings.toml  testlogs.txt
.github/workflows/: docker.yml  release.yml  rust.yaml  rust.yml  test-suite.yml
CLAUDE/examples-v1.3.4/reth-custom-beacon-withdrawals/: main.rs
CLAUDE/examples-v1.3.4/reth-custom-evm/: main.rs
CLAUDE/examples-v1.3.4/reth-custom-inspector/: main.rs
CLAUDE/examples-v1.3.4/reth-custom-payload-builder/: main.rs
CLAUDE/examples-v1.3.4/reth-precompile-cache/: main.rs
backup/chainspec/src/: constants.rs  dev.rs  lib.rs
backup/precompiles/: abi.rs  btc_client.rs
chainspec/: Cargo.toml
chainspec/src/: constants.rs  dev.rs  lib.rs  mainnet.rs  precompiles.rs  sova_hardfork.rs  testnet.rs
cli/: Cargo.toml  cargo.toml
cli/src/: app.rs  chainspec.rs  cli.rs  commands.rs  lib.rs
crates/abi-encoding/: Cargo.toml
crates/abi-encoding/src/: lib.rs
crates/bitcoin-client/: Cargo.toml
crates/bitcoin-client/src/: lib.rs
crates/bitcoin-precompiles/: Cargo.toml
crates/bitcoin-precompiles/src/: lib.rs
crates/bitcoin-precompiles/src/precompiles/: check_signature.rs  decode_raw_transaction.rs  get_block_count.rs  mod.rs  send_raw_transaction.rs
crates/chainspec/: Cargo.toml
crates/chainspec/src/: constants.rs  dev.rs  lib.rs  mainnet.rs  testnet.rs
crates/chainspec/src/genesis/: dev.json
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  chainspec.rs  lib.rs
crates/cli/src/commands/: mod.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/engine-primitives/: Cargo.toml
crates/engine-primitives/src/: lib.rs  payload.rs
crates/evm/: Cargo.toml
crates/evm/src/: abi.rs  constants.rs  error.rs  evm.rs  execute.rs  lib.rs  precompiles.rs  utils.rs
crates/evm/src/client/: bitcoin.rs  mod.rs
crates/evm/src/inspector/: inspector.rs  mod.rs  provider.rs  storage_cache.rs  storage_inspector.rs  table.rs
crates/evm/src/precompiles/: abi.rs  btc_client.rs  mod.rs  precompile_utils.rs
crates/node/: Cargo.toml
crates/node/src/: args.rs  engine.rs  lib.rs  node.rs  rpc.rs
crates/payload/: Cargo.toml
crates/payload/src/: builder.rs  lib.rs
crates/primitives/: Cargo.toml
crates/primitives/src/: lib.rs
crates/primitives/src/transaction/: deposit.rs  envelope.rs  mod.rs  receipt.rs  signed.rs  tx_type.rs  typed.rs
crates/primitives/src/tx/: envelope.rs  l1_block.rs  mod.rs  pooled.rs  request.rs  signed.rs  tx_type.rs  typed.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: error.rs  lib.rs  types.rs  validation.rs
crates/rpc/src/eth/: block.rs  call.rs  mod.rs  network.rs  pending_block.rs  receipt.rs  transaction.rs
crates/sova-evm/: Cargo.toml
crates/sova-evm/src/: block_executor.rs  constants.rs  evm.rs  execute.rs  execute_simple.rs  l1.rs  l1block_reader.rs  lib.rs  provider.rs  sentinel_client.rs  sentinel_worker.rs  slot_lock_manager.rs  state_hook.rs  tests.rs
crates/sova-evm/src/inspector/: error.rs  mod.rs  provider.rs  storage_cache.rs
crates/sova-evm/src/precompiles/: abi.rs  address_deriver.rs  btc_client.rs  mod.rs  precompile_utils.rs
crates/sova-evm/src/sova_revm/: builder.rs  default_ctx.rs  evm.rs  exec.rs  mod.rs
crates/transaction-pool/: Cargo.toml
crates/transaction-pool/src/: lib.rs  txpool.rs
crates/txpool/: Cargo.toml
crates/txpool/src/: lib.rs  validator.rs
docs/: README.md  contributing.md  release.md
docs/design/: withdrawls.mmd
docs/specs/: v0.0.1.md  v0.0.2.md  v0.0.3.md  v0.0.4.md
evm/: Cargo.toml
evm/src/: alloy.rs  assembler.rs  builder.rs  canyon.rs  config.rs  env.rs  executor.rs  l1block_reader.rs  maybe_sova_inspector.rs  mod.rs  sova_revm.rs  sova_revm_builder.rs  sova_revm_exec.rs  spec_id.rs
evm/src/inspector/: handle.rs  mod.rs  provider.rs  sova_trait.rs  storage_cache.rs
evm/src/precompiles/: abi.rs  address_deriver.rs  bitcoin_precompile.rs  btc_client.rs  mod.rs  precompile_utils.rs
evm/src/revm/: builder.rs  default.rs  exec.rs  mod.rs
node/: Cargo.toml
node/src/: args.rs  cli.rs  lib.rs
node/src/cli/: app.rs
scripts/: dev-double-spend-test-transfer.sh  dev-double-spend-test-withdraw.sh  dev-double-spend-test.sh
slot-lock-manager/: Cargo.toml  README.md
slot-lock-manager/src/: cache.rs  client.rs  error.rs  lib.rs  manager.rs  types.rs
src/: Cargo.toml  cli.rs  config.rs  genesis.rs  lib.rs  main.rs  settings.rs
src/chainspec/: constants.rs  mod.rs
src/evm/: alloy.rs  assembler.rs  builder.rs  config.rs  env.rs  executor.rs  mod.rs
src/modules/: abi_decoding.rs  abi_encoding.rs  bitcoin_client.rs  bitcoin_precompile.rs  btc_storage.rs  constants.rs  encoding.rs  execute.rs  mod.rs
src/precompiles/: address_deriver.rs  mod.rs  precompile_utils.rs
