[workspace.package]
version = "0.2.1"
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SovaNetwork/sova-reth"
keywords = ["bitcoin", "blockchain", "evm", "reth", "sova-reth"]

[workspace]
members = [
    "bin/sova/",
    "chainspec",
    "evm",
    "node",
]
default-members = ["bin/sova/"]
resolver = "2"

[workspace.dependencies]
# sova
sova-node = { path = "node" }
sova-chainspec = { path = "chainspec" }
sova-evm = { path = "evm" }

# sova external
sova-sentinel-client = { git = "https://github.com/SovaNetwork/sova-sentinel.git", rev = "40e585da3223a35451d694213474b6d04fcc8e2e" }
sova-sentinel-proto = { git = "https://github.com/SovaNetwork/sova-sentinel.git", rev = "40e585da3223a35451d694213474b6d04fcc8e2e" }

# reth
reth-chain-state = { git = "https://github.com/paradigmxyz/reth.git", rev = "d6845357c1275493d346de692122c4975fc5a25b" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth.git", rev = "d6845357c1275493d346de692122c4975fc5a25b" }
reth-cli = { git = "https://github.com/paradigmxyz/reth.git", rev = "d6845357c1275493d346de692122c4975fc5a25b" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth.git", rev = "d6845357c1275493d346de692122c4975fc5a25b" }
reth-codecs = { git = "https://github.com/paradigmxyz/reth.git", rev = "d6845357c1275493d346de692122c4975fc5a25b" }
reth-engine-local = { git = "https://github.com/paradigmxyz/reth.git", rev = "d6845357c1275493d346de692122c4975fc5a25b" }
reth-db-api = { git = "https://github.com/paradigmxyz/reth.git", rev = "d6845357c1275493d346de692122c4975fc5a25b" }
reth-engine-primitives = { git = "https://github.com/paradigmxyz/reth.git", rev = "d6845357c1275493d346de692122c4975fc5a25b" }
reth-evm = { git = "https://github.com/paradigmxyz/reth.git", rev = "d6845357c1275493d346de692122c4975fc5a25b" }
reth-network-peers = { git = "https://github.com/paradigmxyz/reth.git", rev = "d6845357c1275493d346de692122c4975fc5a25b" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth.git", rev = "d6845357c1275493d346de692122c4975fc5a25b" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth.git", rev = "d6845357c1275493d346de692122c4975fc5a25b" }
reth-optimism-chainspec = { git = "https://github.com/paradigmxyz/reth.git", rev = "d6845357c1275493d346de692122c4975fc5a25b" }
reth-optimism-cli = { git = "https://github.com/paradigmxyz/reth.git", rev = "d6845357c1275493d346de692122c4975fc5a25b" }
reth-optimism-evm = { git = "https://github.com/paradigmxyz/reth.git", rev = "d6845357c1275493d346de692122c4975fc5a25b" }
reth-optimism-forks = { git = "https://github.com/paradigmxyz/reth.git", rev = "d6845357c1275493d346de692122c4975fc5a25b" }
reth-optimism-node = { git = "https://github.com/paradigmxyz/reth.git", rev = "d6845357c1275493d346de692122c4975fc5a25b" }
reth-optimism-primitives = { git = "https://github.com/paradigmxyz/reth.git", rev = "d6845357c1275493d346de692122c4975fc5a25b", features = ["serde", "serde-bincode-compat", "reth-codec"]}
reth-optimism-rpc = { git = "https://github.com/paradigmxyz/reth.git", rev = "d6845357c1275493d346de692122c4975fc5a25b" }
reth-ethereum = { git = "https://github.com/paradigmxyz/reth.git", rev = "d6845357c1275493d346de692122c4975fc5a25b", features = ["evm"] }
reth-op = { git = "https://github.com/paradigmxyz/reth.git", rev = "d6845357c1275493d346de692122c4975fc5a25b", features = ["node-api"] }
reth-payload-primitives = { git = "https://github.com/paradigmxyz/reth.git", rev = "d6845357c1275493d346de692122c4975fc5a25b" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth.git", rev = "d6845357c1275493d346de692122c4975fc5a25b" }
reth-revm = { git = "https://github.com/paradigmxyz/reth.git", rev = "d6845357c1275493d346de692122c4975fc5a25b" }
reth-rpc-api = { git = "https://github.com/paradigmxyz/reth.git", rev = "d6845357c1275493d346de692122c4975fc5a25b" }
reth-rpc-engine-api = { git = "https://github.com/paradigmxyz/reth.git", rev = "d6845357c1275493d346de692122c4975fc5a25b" }
reth-rpc-eth-api = { git = "https://github.com/paradigmxyz/reth.git", rev = "d6845357c1275493d346de692122c4975fc5a25b" }
reth-storage-errors = { git = "https://github.com/paradigmxyz/reth.git", rev = "d6845357c1275493d346de692122c4975fc5a25b" }
reth-tasks = { git = "https://github.com/paradigmxyz/reth.git", rev = "d6845357c1275493d346de692122c4975fc5a25b" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth.git", rev = "d6845357c1275493d346de692122c4975fc5a25b" }

# revm
op-revm = { version = "10.0.0", default-features = false }
revm = { version = "29.0.0", default-features = false }
revm-primitives = { version = "20.2.1", default-features = false }
revm-precompile = { version = "27.0.0", default-features = false }

# eth
alloy-consensus = { version = "=1.0.27", default-features = false }
alloy-eips = { version = "=1.0.27", default-features = false }
alloy-evm = { version = "0.20.1", features = ["op"], default-features = false }
alloy-genesis = { version = "=1.0.27", default-features = false }
alloy-network = { version = "=1.0.27", default-features = false }
alloy-op-hardforks = { version = "0.3.0" }
alloy-rpc-types-engine = { version = "=1.0.27", default-features = false }
alloy-rpc-types-eth = { version = "=1.0.27", default-features = false }

# alloy core
alloy-dyn-abi = "1.3.1"
alloy-primitives = { version = "1.3.1", default-features = false, features = ["map-foldhash"] }
alloy-rlp = { version = "0.3.10", default-features = false, features = ["core-net"] }
alloy-sol-types = { version = "1.3.1", default-features = false }

# op-alloy
alloy-op-evm = { version = "0.20.1", default-features = false }
op-alloy-consensus = { version = "0.19.0", default-features = false }
op-alloy-network = { version = "=0.19.0", default-features = false }
op-alloy-rpc-types = { version = "=0.19.0", default-features = false }
op-alloy-rpc-types-engine = { version = "=0.19.0", default-features = false }

# bitcoin
bitcoin = { version = "0.31.1", features = ["bitcoinconsensus"] }
bitcoincore-rpc = "0.18.0"

# misc
async-trait = "0.1.68"
clap = { version = "4.4.18", features = ["derive", "env"] } 
derive_more = { version = "2", default-features = false, features = ["full"] }
eyre = "0.6.0"
hex = "0.4.3"
once_cell = { version = "1.19", default-features = false, features = ["critical-section"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }
serde = "1"
serde_json = "1"
thiserror = { version = "2.0.0", default-features = false }
tokio = { version = "1.44.2", default-features = false }
tonic = "0.12.3"
tracing = "0.1"
uuid = { version = "1.17.0", features = ["v4", "serde"] }