[workspace.package]
version = "0.4.0"
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SovaNetwork/sova-reth"
keywords = ["bitcoin", "blockchain", "evm", "reth", "sova-reth"]

[workspace]
members = [
    "bin/sova/",
    "chainspec",
    "evm",
    "node",
]
default-members = ["bin/sova/"]
resolver = "2"

[workspace.dependencies]
# sova
sova-node = { path = "node" }
sova-chainspec = { path = "chainspec" }
sova-evm = { path = "evm" }

# sova external
sova-sentinel-client = { git = "https://github.com/SovaNetwork/sova-sentinel.git", rev = "40e585da3223a35451d694213474b6d04fcc8e2e" }
sova-sentinel-proto = { git = "https://github.com/SovaNetwork/sova-sentinel.git", rev = "40e585da3223a35451d694213474b6d04fcc8e2e" }

# reth
reth-chain-state = { git = "https://github.com/paradigmxyz/reth.git", rev = "e6608be51ea34424b8e3693cf1f946a3eb224736" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth.git", rev = "e6608be51ea34424b8e3693cf1f946a3eb224736" }
reth-cli = { git = "https://github.com/paradigmxyz/reth.git", rev = "e6608be51ea34424b8e3693cf1f946a3eb224736" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth.git", rev = "e6608be51ea34424b8e3693cf1f946a3eb224736" }
reth-codecs = { git = "https://github.com/paradigmxyz/reth.git", rev = "e6608be51ea34424b8e3693cf1f946a3eb224736" }
reth-engine-local = { git = "https://github.com/paradigmxyz/reth.git", rev = "e6608be51ea34424b8e3693cf1f946a3eb224736" }
reth-db-api = { git = "https://github.com/paradigmxyz/reth.git", rev = "e6608be51ea34424b8e3693cf1f946a3eb224736" }
reth-engine-primitives = { git = "https://github.com/paradigmxyz/reth.git", rev = "e6608be51ea34424b8e3693cf1f946a3eb224736" }
reth-evm = { git = "https://github.com/paradigmxyz/reth.git", rev = "e6608be51ea34424b8e3693cf1f946a3eb224736" }
reth-network-peers = { git = "https://github.com/paradigmxyz/reth.git", rev = "e6608be51ea34424b8e3693cf1f946a3eb224736" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth.git", rev = "e6608be51ea34424b8e3693cf1f946a3eb224736" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth.git", rev = "e6608be51ea34424b8e3693cf1f946a3eb224736" }
reth-optimism-chainspec = { git = "https://github.com/paradigmxyz/reth.git", rev = "e6608be51ea34424b8e3693cf1f946a3eb224736" }
reth-optimism-cli = { git = "https://github.com/paradigmxyz/reth.git", rev = "e6608be51ea34424b8e3693cf1f946a3eb224736" }
reth-optimism-evm = { git = "https://github.com/paradigmxyz/reth.git", rev = "e6608be51ea34424b8e3693cf1f946a3eb224736" }
reth-optimism-forks = { git = "https://github.com/paradigmxyz/reth.git", rev = "e6608be51ea34424b8e3693cf1f946a3eb224736" }
reth-optimism-node = { git = "https://github.com/paradigmxyz/reth.git", rev = "e6608be51ea34424b8e3693cf1f946a3eb224736" }
reth-optimism-primitives = { git = "https://github.com/paradigmxyz/reth.git", rev = "e6608be51ea34424b8e3693cf1f946a3eb224736", features = ["serde", "serde-bincode-compat", "reth-codec"]}
reth-optimism-txpool = { git = "https://github.com/paradigmxyz/reth.git", rev = "e6608be51ea34424b8e3693cf1f946a3eb224736" }
reth-optimism-rpc = { git = "https://github.com/paradigmxyz/reth.git", rev = "e6608be51ea34424b8e3693cf1f946a3eb224736" }
reth-ethereum = { git = "https://github.com/paradigmxyz/reth.git", rev = "e6608be51ea34424b8e3693cf1f946a3eb224736", features = ["evm"] }
reth-op = { git = "https://github.com/paradigmxyz/reth.git", rev = "e6608be51ea34424b8e3693cf1f946a3eb224736", features = ["node-api"] }
reth-payload-primitives = { git = "https://github.com/paradigmxyz/reth.git", rev = "e6608be51ea34424b8e3693cf1f946a3eb224736" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth.git", rev = "e6608be51ea34424b8e3693cf1f946a3eb224736" }
reth-revm = { git = "https://github.com/paradigmxyz/reth.git", rev = "e6608be51ea34424b8e3693cf1f946a3eb224736" }
reth-rpc-api = { git = "https://github.com/paradigmxyz/reth.git", rev = "e6608be51ea34424b8e3693cf1f946a3eb224736" }
reth-rpc-engine-api = { git = "https://github.com/paradigmxyz/reth.git", rev = "e6608be51ea34424b8e3693cf1f946a3eb224736" }
reth-rpc-eth-api = { git = "https://github.com/paradigmxyz/reth.git", rev = "e6608be51ea34424b8e3693cf1f946a3eb224736" }
reth-storage-errors = { git = "https://github.com/paradigmxyz/reth.git", rev = "e6608be51ea34424b8e3693cf1f946a3eb224736" }
reth-tasks = { git = "https://github.com/paradigmxyz/reth.git", rev = "e6608be51ea34424b8e3693cf1f946a3eb224736" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth.git", rev = "e6608be51ea34424b8e3693cf1f946a3eb224736" }

# revm
op-revm = { version = "10.1.0", default-features = false }
revm = { version = "29.0.1", default-features = false }
revm-primitives = { version = "20.2.1", default-features = false }
revm-precompile = { version = "27.0.0", default-features = false }

# eth
alloy-consensus = { version = "1.0.35", default-features = false }
alloy-eips = { version = "1.0.35", default-features = false }
alloy-evm = { version = "0.21.1", features = ["op"], default-features = false }
alloy-genesis = { version = "1.0.35", default-features = false }
alloy-network = { version = "1.0.35", default-features = false }
alloy-op-hardforks = { version = "0.3.5" }
alloy-rpc-types-engine = { version = "1.0.35", default-features = false }
alloy-rpc-types-eth = { version = "1.0.35", default-features = false }

# alloy core
alloy-primitives = { version = "1.3.1", default-features = false, features = ["map-foldhash"] }
alloy-rlp = { version = "0.3.10", default-features = false, features = ["core-net"] }
alloy-sol-types = { version = "1.3.1", default-features = false }

# op-alloy
alloy-op-evm = { version = "0.21.0", default-features = false }
op-alloy-consensus = { version = "0.20.0", default-features = false }
op-alloy-network = { version = "0.20.0", default-features = false }
op-alloy-rpc-types = { version = "0.20.0", default-features = false }
op-alloy-rpc-types-engine = { version = "0.20.0", default-features = false }

# bitcoin
bitcoin = { version = "0.31.1", features = ["bitcoinconsensus"] }
bitcoincore-rpc = "0.18.0"

# misc
async-trait = "0.1.68"
clap = { version = "4.4.18", features = ["derive", "env"] } 
derive_more = { version = "2", default-features = false, features = ["full"] }
eyre = "0.6.0"
hex = "0.4.3"
once_cell = { version = "1.19", default-features = false, features = ["critical-section"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }
serde = "1"
serde_json = "1"
thiserror = { version = "2.0.0", default-features = false }
tokio = { version = "1.44.2", default-features = false }
tonic = "0.12.3"
uuid = { version = "1.17.0", features = ["v4", "serde"] }