[workspace.package]
version = "0.4.5"
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SovaNetwork/sova-reth"
keywords = ["bitcoin", "blockchain", "evm", "reth", "sova-reth"]

[workspace]
members = [
    "bin/sova/",
    "chainspec",
    "cli",
    "evm",
    "node",
]
default-members = ["bin/sova/"]
resolver = "2"

[workspace.dependencies]
# sova
sova-chainspec = { path = "chainspec" }
sova-cli = { path = "cli" }
sova-evm = { path = "evm" }
sova-node = { path = "node" }

# sova external
sova-sentinel-client = { git = "https://github.com/SovaNetwork/sova-sentinel.git", rev = "40e585da3223a35451d694213474b6d04fcc8e2e" }
sova-sentinel-proto = { git = "https://github.com/SovaNetwork/sova-sentinel.git", rev = "40e585da3223a35451d694213474b6d04fcc8e2e" }

# reth
reth-chain-state = { git = "https://github.com/paradigmxyz/reth.git", rev = "42197415102b7a20be42e4fe919f024b81ceb55b" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth.git", rev = "42197415102b7a20be42e4fe919f024b81ceb55b" }
reth-cli = { git = "https://github.com/paradigmxyz/reth.git", rev = "42197415102b7a20be42e4fe919f024b81ceb55b" }
reth-cli-commands = { git = "https://github.com/paradigmxyz/reth.git", rev = "42197415102b7a20be42e4fe919f024b81ceb55b" }
reth-cli-runner = { git = "https://github.com/paradigmxyz/reth.git", rev = "42197415102b7a20be42e4fe919f024b81ceb55b" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth.git", rev = "42197415102b7a20be42e4fe919f024b81ceb55b" }
reth-codecs = { git = "https://github.com/paradigmxyz/reth.git", rev = "42197415102b7a20be42e4fe919f024b81ceb55b" }
reth-db = { git = "https://github.com/paradigmxyz/reth.git", rev = "42197415102b7a20be42e4fe919f024b81ceb55b" }
reth-engine-local = { git = "https://github.com/paradigmxyz/reth.git", rev = "42197415102b7a20be42e4fe919f024b81ceb55b" }
reth-db-api = { git = "https://github.com/paradigmxyz/reth.git", rev = "42197415102b7a20be42e4fe919f024b81ceb55b" }
reth-engine-primitives = { git = "https://github.com/paradigmxyz/reth.git", rev = "42197415102b7a20be42e4fe919f024b81ceb55b" }
reth-ethereum = { git = "https://github.com/paradigmxyz/reth.git", rev = "42197415102b7a20be42e4fe919f024b81ceb55b", features = ["evm"] }
reth-evm = { git = "https://github.com/paradigmxyz/reth.git", rev = "42197415102b7a20be42e4fe919f024b81ceb55b" }
reth-network-peers = { git = "https://github.com/paradigmxyz/reth.git", rev = "42197415102b7a20be42e4fe919f024b81ceb55b" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth.git", rev = "42197415102b7a20be42e4fe919f024b81ceb55b" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth.git", rev = "42197415102b7a20be42e4fe919f024b81ceb55b" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth.git", rev = "42197415102b7a20be42e4fe919f024b81ceb55b" }
reth-node-metrics = { git = "https://github.com/paradigmxyz/reth.git", rev = "42197415102b7a20be42e4fe919f024b81ceb55b" }
reth-optimism-chainspec = { git = "https://github.com/paradigmxyz/reth.git", rev = "42197415102b7a20be42e4fe919f024b81ceb55b" }
reth-optimism-cli = { git = "https://github.com/paradigmxyz/reth.git", rev = "42197415102b7a20be42e4fe919f024b81ceb55b" }
reth-optimism-consensus = { git = "https://github.com/paradigmxyz/reth.git", rev = "42197415102b7a20be42e4fe919f024b81ceb55b" }
reth-optimism-evm = { git = "https://github.com/paradigmxyz/reth.git", rev = "42197415102b7a20be42e4fe919f024b81ceb55b" }
reth-optimism-forks = { git = "https://github.com/paradigmxyz/reth.git", rev = "42197415102b7a20be42e4fe919f024b81ceb55b" }
reth-optimism-node = { git = "https://github.com/paradigmxyz/reth.git", rev = "42197415102b7a20be42e4fe919f024b81ceb55b" }
reth-optimism-primitives = { git = "https://github.com/paradigmxyz/reth.git", rev = "42197415102b7a20be42e4fe919f024b81ceb55b", features = ["serde", "serde-bincode-compat", "reth-codec"]}
reth-optimism-txpool = { git = "https://github.com/paradigmxyz/reth.git", rev = "42197415102b7a20be42e4fe919f024b81ceb55b" }
reth-optimism-rpc = { git = "https://github.com/paradigmxyz/reth.git", rev = "42197415102b7a20be42e4fe919f024b81ceb55b" }
reth-op = { git = "https://github.com/paradigmxyz/reth.git", rev = "42197415102b7a20be42e4fe919f024b81ceb55b", features = ["node-api"] }
reth-payload-primitives = { git = "https://github.com/paradigmxyz/reth.git", rev = "42197415102b7a20be42e4fe919f024b81ceb55b" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth.git", rev = "42197415102b7a20be42e4fe919f024b81ceb55b" }
reth-revm = { git = "https://github.com/paradigmxyz/reth.git", rev = "42197415102b7a20be42e4fe919f024b81ceb55b" }
reth-rpc-api = { git = "https://github.com/paradigmxyz/reth.git", rev = "42197415102b7a20be42e4fe919f024b81ceb55b" }
reth-rpc-engine-api = { git = "https://github.com/paradigmxyz/reth.git", rev = "42197415102b7a20be42e4fe919f024b81ceb55b" }
reth-rpc-eth-api = { git = "https://github.com/paradigmxyz/reth.git", rev = "42197415102b7a20be42e4fe919f024b81ceb55b" }
reth-rpc-server-types = { git = "https://github.com/paradigmxyz/reth.git", rev = "42197415102b7a20be42e4fe919f024b81ceb55b" }
reth-storage-errors = { git = "https://github.com/paradigmxyz/reth.git", rev = "42197415102b7a20be42e4fe919f024b81ceb55b" }
reth-tasks = { git = "https://github.com/paradigmxyz/reth.git", rev = "42197415102b7a20be42e4fe919f024b81ceb55b" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth.git", rev = "42197415102b7a20be42e4fe919f024b81ceb55b" }

# revm
op-revm = { version = "10.1.1", default-features = false }
revm = { version = "29.0.1", default-features = false }
revm-primitives = { version = "20.2.1", default-features = false }
revm-precompile = { version = "27.0.0", default-features = false }

# eth
alloy-consensus = { version = "1.0.37", default-features = false }
alloy-eips = { version = "1.0.37", default-features = false }
alloy-evm = { version = "0.21.3", features = ["op"], default-features = false }
alloy-genesis = { version = "1.0.37", default-features = false }
alloy-network = { version = "1.0.37", default-features = false }
alloy-op-hardforks = { version = "0.3.5" }
alloy-rpc-types-engine = { version = "1.0.37", default-features = false }
alloy-rpc-types-eth = { version = "1.0.37", default-features = false }

# alloy core
alloy-primitives = { version = "1.3.1", default-features = false, features = ["map-foldhash"] }
alloy-rlp = { version = "0.3.10", default-features = false, features = ["core-net"] }
alloy-sol-types = { version = "1.3.1", default-features = false }

# op-alloy
alloy-op-evm = { version = "0.21.3", default-features = false }
op-alloy-consensus = { version = "0.20.0", default-features = false }
op-alloy-network = { version = "0.20.0", default-features = false }
op-alloy-rpc-types = { version = "0.20.0", default-features = false }
op-alloy-rpc-types-engine = { version = "0.20.0", default-features = false }

# bitcoin
bitcoin = { version = "0.31.1", features = ["bitcoinconsensus"] }
bitcoincore-rpc = "0.18.0"

# misc
async-trait = "0.1.68"
clap = { version = "4.4.18", features = ["derive", "env"] }
derive_more = { version = "2", default-features = false, features = ["full"] }
eyre = "0.6.0"
hex = "0.4.3"
once_cell = { version = "1.19", default-features = false, features = ["critical-section"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }
serde = "1"
serde_json = "1"
thiserror = { version = "2.0.0", default-features = false }
tokio = { version = "1.44.2", default-features = false }
tonic = "0.12.3"
tracing = "0.1"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
