[package]
name = "sova-chainspec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
reth-chainspec.workspace = true
reth-cli.workspace = true
reth-ethereum.workspace = true
reth-revm.workspace = true
reth-network-peers.workspace = true
reth-optimism-chainspec.workspace = true
reth-optimism-forks.workspace = true
reth-primitives-traits.workspace = true
reth-tracing.workspace = true

revm-primitives.workspace = true

alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-genesis.workspace = true
alloy-primitives.workspace = true

eyre.workspace = true
serde_json.workspace = true