[package]
name = "slot-lock-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
# Sova
sova-chainspec.workspace = true

# Core types
alloy-primitives = { workspace = true, features = ["serde"] }
alloy-rlp.workspace = true

# Async runtime and utilities
tokio.workspace = true
async-trait.workspace = true
parking_lot.workspace = true

# Error handling and logging
thiserror.workspace = true
tracing.workspace = true

# Serialization and utilities
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
hex.workspace = true
uuid.workspace = true

# gRPC client
tonic.workspace = true

# Sentinel client dependencies
sova-sentinel-client.workspace = true
sova-sentinel-proto.workspace = true

[dev-dependencies]
mockall = "0.12"