[package]
name = "slot-lock-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
# Sova
sova-chainspec.workspace = true

# Sova Sentinel
sova-sentinel-client.workspace = true
sova-sentinel-proto.workspace = true

# Core deps
alloy-primitives = { workspace = true, features = ["serde"] }
alloy-rlp.workspace = true
revm.workspace = true

# Misc deps
eyre.workspace = true
tokio.workspace = true
async-trait.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
hex.workspace = true
uuid.workspace = true
tonic.workspace = true