[package]
name = "corsa-reth-chainspec"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
reth-chainspec.workspace = true
reth-ethereum-forks.workspace = true

alloy-chains.workspace = true
alloy-consensus.workspace = true
alloy-genesis.workspace = true
alloy-primitives.workspace = true

derive_more.workspace = true
serde_json.workspace = true