[package]
name = "sova-chainspec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
reth-chainspec.workspace = true
reth-revm.workspace = true

alloy-consensus.workspace = true
alloy-genesis.workspace = true
alloy-primitives.workspace = true

serde_json.workspace = true
