[package]
name = "sova-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sova-chainspec.workspace = true

reth-cli.workspace = true
reth-chainspec.workspace = true

bitcoin.workspace = true
clap.workspace = true
eyre.workspace = true
