[package]
name = "sova-evm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
sova-cli.workspace = true

reth-chainspec.workspace = true
reth-evm.workspace = true
reth-node-api.workspace = true
reth-node-ethereum.workspace = true
reth-primitives.workspace = true
reth-primitives-traits.workspace = true
reth-provider.workspace = true
reth-tracing.workspace = true
reth-revm.workspace = true

alloy-consensus.workspace = true
alloy-dyn-abi.workspace = true
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true

bitcoin.workspace = true
bitcoincore-rpc.workspace = true
eyre.workspace = true
hex.workspace = true
parking_lot.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
