[package]
name = "sova-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
sova-cli.workspace = true
sova-evm.workspace = true

reth.workspace = true
reth-node-ethereum.workspace = true
reth-trie-db.workspace = true

bitcoin.workspace = true
clap.workspace = true
eyre.workspace = true
