[package]
name = "sova-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
sova-cli.workspace = true
sova-engine-primitives.workspace = true
sova-evm.workspace = true
sova-payload.workspace = true
sova-primitives.workspace = true
sova-rpc.workspace = true
sova-transaction-pool.workspace = true

reth-basic-payload-builder.workspace = true
reth-chainspec.workspace = true
reth-engine-primitives.workspace = true
reth-ethereum-engine-primitives.workspace = true
reth-ethereum-payload-builder.workspace = true
reth-ethereum-primitives.workspace = true
reth-evm.workspace = true
reth-node-api.workspace = true
reth-node-builder.workspace = true
reth-node-ethereum.workspace = true
reth-payload-builder.workspace = true
reth-payload-primitives.workspace = true
reth-primitives.workspace = true
reth-primitives-traits.workspace = true
reth-provider.workspace = true
reth-rpc.workspace = true
reth-rpc-api.workspace = true
reth-rpc-builder.workspace = true
reth-rpc-eth-types.workspace = true
reth-transaction-pool.workspace = true
reth-trie-db.workspace = true

revm.workspace = true

alloy-rpc-types-engine.workspace = true

bitcoin.workspace = true
bitcoincore-rpc.workspace = true

clap.workspace = true
eyre.workspace = true
