[package]
name = "sova-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
sova-cli.workspace = true
sova-evm.workspace = true
sova-payload.workspace = true
sova-rpc.workspace = true

reth-basic-payload-builder.workspace = true
reth-chainspec.workspace = true
reth-consensus.workspace = true
reth-ethereum-payload-builder.workspace = true
reth-evm.workspace = true
reth-engine-primitives.workspace = true
reth-network.workspace = true
reth-node-api.workspace = true
reth-node-builder.workspace = true
reth-node-core.workspace = true
reth-optimism-rpc.workspace = true
reth-payload-builder.workspace = true
reth-payload-primitives.workspace = true
reth-payload-validator.workspace = true
reth-primitives.workspace = true
reth-primitives-traits.workspace = true
reth-provider.workspace = true
reth-rpc-eth-types.workspace = true
reth-rpc-engine-api.workspace = true
reth-rpc.workspace = true
reth-tracing.workspace = true
reth-transaction-pool.workspace = true
reth-trie-db.workspace = true

reth-optimism-chainspec.workspace = true
reth-optimism-forks.workspace = true
reth-optimism-payload-builder.workspace = true
reth-optimism-primitives.workspace = true
reth-optimism-node.workspace = true

alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-rpc-types-engine.workspace = true

op-alloy-consensus.workspace = true
op-alloy-rpc-types-engine.workspace = true

op-revm.workspace = true

revm-context.workspace = true

bitcoin.workspace = true
bitcoincore-rpc.workspace = true

clap.workspace = true
eyre.workspace = true
serde.workspace = true
